--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
 
 <body>
     <div id="tape">
-        <div class="symbols-wrapper">
-            <!--<div class="symbol blank">B</div>
-            <div class="symbol">0</div>
-            <div class="symbol">0</div>
-            <div class="symbol">1</div>
-            <div class="symbol">1</div>
-            <div class="symbol blank">B</div>-->
-        </div>
+        <div class="symbols-wrapper"></div>
         <div id="cursor"></div>
+        <p id="hint">
+            Press Space to move to the next state.
+        </p>
     </div>
     <div class="wrapper">
     </div>
