--- a/index.html
+++ b/index.html
@@ -10,21 +10,32 @@
 <body>
     <p id="description">
         This Turing Machine accepts <br/> L = {w | w = a<sup>i</sup>b<sup>j</sup>c<sup>k</sup>; i,j,k > 0}<br/>
-        <span class="state"></span>
+        Current state: <span class="current-state">q<sub>0</sub></span>
+        <span class="state"></span><br/>
     </p>
     <div id="tape">
         <div class="symbols-wrapper"></div>
         <div id="cursor"></div>
         <p id="hint">
-            Press Space to move to the next state.
+            Press "Space" to move to the next state<br/>or "R" to reset.
         </p>
     </div>
-    <div class="wrapper">
+    <div id="editor">
+        <div class="transition-table-wrapper">
+            <h2>Transition table</h2>
+            <table class="transition-table">
+                <thead><tr></tr></thead>
+                <tbody></tbody>
+            </table>
+        </div>
+        <a href="#" class="banner"><span>Click&nbsp;me!</span></a>
     </div>
-    <script type="application/javascript">
-        window.input = ["a", "b", "b", "c"];
-    </script>
     <script src="js/script.js" type="application/javascript"></script>
+    <script type="application/javascript">
+        window.reset(
+            ["a", "a", "b", "b", "c"] // The initial tape
+        );
+    </script>
 </body>
 
 </html>
