transition table is now editable

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                 </thead>
                 <tbody></tbody>
             </table>
+            <a href="#" id="add-state">&plus; Add state</a>
+            <input type="submit" id="set-transitions" value="Save transition table" />
             <div class="machine-input">
                 <form>
                     <label for="machine-input">Input</label>
