--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 
 <body>
     <p id="description">
-        This Turing Machine accepts <br/> L = {w | w = a<sup>i</sup>b<sup>j</sup>c<sup>k</sup>; i,j,k > 0}<br/> Current state: <span class="current-state">q<sub>0</sub></span>
+        <span class="description">This Turing Machine accepts <br/> L = {w | w = a<sup>i</sup>b<sup>j</sup>c<sup>k</sup>; i,j,k > 0}</span><br/> Current state: <span class="current-state">q<sub>0</sub></span>
         <span class="state"></span><br/>
+        <strong>Cv:</strong>
+        <a id="cv71" href="#cv71" class="current">7.1</a>
+        <a id="cv72" href="#cv72" class="current">7.2</a>
     </p>
     <div id="tape">
         <div class="symbols-wrapper"></div>
