now you can clicnk on space and r

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="symbols-wrapper"></div>
         <div id="cursor"></div>
         <p id="hint">
-            Press "Space" to move to the next state<br/>or "R" to reset.
+            Press <a id="space" href="#">"Space"</a> to move to the next state<br/>or <a id="r" href="#">"R"</a> to reset.
         </p>
     </div>
     <div id="editor">
