--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <strong>Cv:</strong>
         <a id="cv301" href="#cv301" class="current">30.1</a>
         <a id="cv302" href="#cv302" class="current">30.2</a>
+        <a id="cv31" href="#cv31" class="current">31</a>
     </p>
     <div id="tape">
         <div class="symbols-wrapper"></div>
