--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a id="cv301" href="#cv301" class="current">30.1</a>
         <a id="cv302" href="#cv302" class="current">30.2</a>
         <a id="cv31" href="#cv31" class="current">31</a>
+        <a id="cv32" href="#cv32" class="current">32</a>
     </p>
     <div id="tape">
         <div class="symbols-wrapper"></div>
