--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a id="cv302" href="#cv302" class="current">30.2</a>
         <a id="cv31" href="#cv31" class="current">31</a>
         <a id="cv32" href="#cv32" class="current">32</a>
+        <a id="cv33" href="#cv33" class="current">33</a>
     </p>
     <div id="tape">
         <div class="symbols-wrapper"></div>
