improved visual glitch

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
     <p id="description">
-        <span class="description">This Turing Machine accepts <br/> L = {w | w = a<sup>i</sup>b<sup>j</sup>c<sup>k</sup>; i,j,k > 0}</span><br/> Current state: <span class="current-state">q<sub>0</sub></span>
+        <span class="description">This Turing Machine accepts <br/> L = {w | w = a<sup>i</sup>b<sup>j</sup>c<sup>k</sup>; i,j,k > 0}</span><br/>
+        Current state: <span class="current-state">q<sub>0</sub></span><br/>
+        Step: <span class="counter">0</span>
         <span class="state"></span><br/>
         <strong>Cv:</strong>
         <a id="cv301" href="#cv301" class="current">30.1</a>
