--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <strong>Cv:</strong>
         <a id="cv301" href="#cv301" class="current">30.1</a>
         <a id="cv302" href="#cv302" class="current">30.2</a>
+        <a id="cv303" href="#cv303" class="current">30.3</a>
         <a id="cv31" href="#cv31" class="current">31</a>
         <a id="cv32" href="#cv32" class="current">32</a>
         <a id="cv33" href="#cv33" class="current">33</a>
