--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a id="cv31" href="#cv31" class="current">31</a>
         <a id="cv32" href="#cv32" class="current">32</a>
         <a id="cv33" href="#cv33" class="current">33</a>
+        <a id="cv34" href="#cv34" class="current">34</a>
     </p>
     <div id="tape">
         <div class="symbols-wrapper"></div>
