--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
         <div class="transition-table-wrapper">
             <h2>Transition table</h2>
             <table class="transition-table">
-                <thead>
-                    <tr></tr>
-                </thead>
+                <thead></thead>
                 <tbody></tbody>
             </table>
             <a href="#" id="add-state">&plus; Add state</a>
