--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="machine-input">
                 <form>
                     <label for="machine-input">Input</label>
-                    <input type="text" name="machine-input" id="machine-input" />
+                    <input type="text" name="machine-input" id="machine-input" pattern="[A-Za-z]+" required />
                     <input type="submit" id="reset" value="Reset" />
                 </form>
             </div>
