--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     </header>
     <section id="tape">
         <div class="symbols-wrapper"></div>
-        <div id="cursor"></div>
+        <svg width="50" height="50">
+            <polygon points="0,25 25,0 50,25" style="fill:white;stroke:black;stroke-width:1" />
+            <text x="15" y="20" fill="red">q0</text>
+        </svg>
     </section>
     <aside id="editor">
         <div class="transition-table-wrapper">
