--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         <a href="#" class="banner"><span>Click&nbsp;me!</span></a>
     </aside>
     <footer id="hint">
-        Press <a id="space" href="#">"Space"</a> to move to the next state<br/>or <a id="r" href="#">"R"</a> to reset.
+        Press <a id="space" href="#">"Space"</a> to move to the next state<br/>or <a id="r" href="#">"R"</a> to reset.<br/>
+        <a href="#" id="save-machine-state">Save machine state</a> | <a href="#" id="load-machine-state">Load machine state</a>
+      </br/>
     </footer>
     <script src="js/script.js" type="application/javascript"></script>
     <script>
