added local storage usage

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <a href="#" class="banner"><span>Click&nbsp;me!</span></a>
     </aside>
     <footer id="hint">
-        Press <a id="space" href="#">"Space"</a> to move to the next state<br/>or <a id="r" href="#">"R"</a> to reset.<br/>
-        <a href="#" id="save-machine-state">Save machine state</a> | <a href="#" id="load-machine-state">Load machine state</a>
+        Press <a id="space" href="#">"Space"</a> to move to the next state<br/>or <a id="r" href="#">"R"</a> to reset.
+        Press <a href="#" id="mute">"M"</a> to <span id="muted">mute</span> sounds.
       </br/>
     </footer>
     <script src="js/script.js" type="application/javascript"></script>
